# key4hep-dev-utils

./: README.md
.github/scripts/: run-clang-format.py
.github/workflows/: fix-clang-format.yml
cmake/fetch-content/: CMakeLists.txt  CMakeLists.txt.jinja2  setup.py
defaults/: .clang-format  .gitignore  .pre-commit-config-key4hep.yaml  .pre-commit-config.yaml
defaults/.github/: dependabot.yml
defaults/cmake/: Key4hepConfig.cmake
defaults/github/: .pre-commit-config-key4hep.yaml  default-branch-ruleset.json  github-settings.json
defaults/github/scripts/: run_pre_commit.py
scripts/: add_versions_to_spec.py  check-commits-after-tag.sh  check-tagged-versions.py  ci-repo.sh  config.py  externals.py  fetch_and_checkout.py  get_packages.sh  merge_pre_commit.py  parse.py  parse_compile_commands.py  spack-remove-unused.py  sync-ci-workflow.sh  sync-files.sh  update-all.sh  update-github-settings.sh  update-pre-commit-config.sh  update-ruleset-all.sh  update-ruleset.sh
tests/: parse_test.py
